generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ===== ROLES Y USUARIOS =====
model Rol {
  id    Int     @id @default(autoincrement())
  nombre String  @unique
  usuarios Usuario[]
}

model Usuario {
  id              Int     @id @default(autoincrement())
  nombreCompleto  String
  correo          String  @unique
  passwordHash    String
  idRol           Int
  rol             Rol     @relation(fields: [idRol], references: [id])
  activo          Boolean @default(true)
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt

  compras         Compra[]
  ventas          Venta[]
  auditoriaLogs   AuditoriaLog[]
  movimientos     MovimientoInventario[]
}

model Cliente {
  id              Int      @id @default(autoincrement())
  nombreCompleto  String
  telefono        String?  @unique
  correo          String?  @unique
  cedula          String?  @unique
  ruc             String?  @unique
  direccion       String?
  activo          Boolean  @default(true)
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt

  ventas          Venta[]
}


// ===== CATEGORÍA DE PRODUCTOS =====
model CategoriaProducto {
  id              Int     @id @default(autoincrement())
  nombre          String  @unique
  descripcion     String?
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt

  productos       Producto[]
}

// ===== PRODUCTOS (CATÁLOGO) =====
model Producto {
  id              Int     @id @default(autoincrement())
  nombre          String  @unique
  codigoBarras    String? @unique
  descripcion     String?
  fechaVencimiento DateTime?  // Legacy field — now tracked per batch (Lote)
  idCategoria     Int
  categoria       CategoriaProducto @relation(fields: [idCategoria], references: [id])
  precioCompra    Decimal @db.Decimal(10, 2)  // Average cost — auto-calculated from purchases
  precioVenta     Decimal @db.Decimal(10, 2)
  precioBlister   Decimal? @db.Decimal(10, 2)
  precioCaja      Decimal? @db.Decimal(10, 2)
  unidadesPorBlister Int?
  unidadesPorCaja Int?
  stockActual     Int     @default(0)  // Computed from Lote totals — read-only in UI
  stockMinimo     Int?
  activo          Boolean @default(true)
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt

  detallesCompra  DetalleCompra[]
  detallesVenta   DetalleVenta[]
  proveedores     ProveedorProducto[]
  lotes           Lote[]
  movimientos     MovimientoInventario[]
}

// ===== PROVEEDORES =====
model Proveedor {
  id              Int     @id @default(autoincrement())
  nombre          String  @unique 
  telefono        String?
  correo          String?
  direccion       String?
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt

  compras         Compra[]
  productos       ProveedorProducto[]
}

// ===== CATÁLOGO PROVEEDOR-PRODUCTO =====
model ProveedorProducto {
  id              Int       @id @default(autoincrement())
  idProveedor     Int
  proveedor       Proveedor @relation(fields: [idProveedor], references: [id], onDelete: Cascade)
  idProducto      Int
  producto        Producto  @relation(fields: [idProducto], references: [id], onDelete: Cascade)
  precioCompra    Decimal?  @db.Decimal(10, 2)
  createdAt       DateTime  @default(now())

  @@unique([idProveedor, idProducto])
}

// ===== COMPRAS A PROVEEDORES =====
model Compra {
  id              Int     @id @default(autoincrement())
  fecha           DateTime @default(now())
  fechaCompra     DateTime?  // Actual invoice date (may differ from registration date)
  numeroFactura   String?
  idProveedor     Int
  proveedor       Proveedor @relation(fields: [idProveedor], references: [id])
  total           Decimal @db.Decimal(10, 2)
  idUsuario       Int
  usuario         Usuario @relation(fields: [idUsuario], references: [id])
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt

  detalles        DetalleCompra[]
}

model DetalleCompra {
  id              Int     @id @default(autoincrement())
  idCompra        Int
  compra          Compra  @relation(fields: [idCompra], references: [id], onDelete: Cascade)
  idProducto      Int
  producto        Producto @relation(fields: [idProducto], references: [id])
  cantidad        Int
  precioUnitario  Decimal @db.Decimal(10, 2)
  subtotal        Decimal @db.Decimal(10, 2)
  lote            String?   // Batch code from invoice
  fechaVencimiento DateTime?  // Expiration date of this batch
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt

  lotes           Lote[]
}

// ===== LOTES (BATCH TRACKING) =====
model Lote {
  id                Int       @id @default(autoincrement())
  idProducto        Int
  producto          Producto  @relation(fields: [idProducto], references: [id], onDelete: Cascade)
  codigoLote        String
  fechaVencimiento  DateTime?
  stockInicial      Int       @default(0)
  stockActual       Int       @default(0)
  costoCompra       Decimal   @db.Decimal(10, 2) @default(0)
  idDetalleCompra   Int?
  detalleCompra     DetalleCompra? @relation(fields: [idDetalleCompra], references: [id], onDelete: SetNull)
  activo            Boolean   @default(true)
  createdAt         DateTime  @default(now())
  updatedAt         DateTime  @updatedAt

  movimientos       MovimientoInventario[]

  @@index([idProducto])
}

// ===== MOVIMIENTOS DE INVENTARIO (KARDEX) =====
model MovimientoInventario {
  id              Int       @id @default(autoincrement())
  idProducto      Int
  producto        Producto  @relation(fields: [idProducto], references: [id], onDelete: Cascade)
  idLote          Int?
  lote            Lote?     @relation(fields: [idLote], references: [id], onDelete: SetNull)
  tipo            String    // 'ENTRADA_COMPRA', 'SALIDA_VENTA', 'AJUSTE_POSITIVO', 'AJUSTE_NEGATIVO'
  cantidad        Int
  stockResultante Int       @default(0)
  costoUnitario   Decimal?  @db.Decimal(10, 2)
  referencia      String?   // e.g. 'Compra #12', 'Venta #45', 'Ajuste: Inventario Físico'
  idUsuario       Int?
  usuario         Usuario?  @relation(fields: [idUsuario], references: [id], onDelete: SetNull)
  createdAt       DateTime  @default(now())

  @@index([idProducto])
  @@index([createdAt])
}

// ===== VENTAS DE FARMACIA =====
model Venta {
  id              Int     @id @default(autoincrement())
  fecha           DateTime @default(now())
  idCliente       Int?
  cliente         Cliente? @relation(fields: [idCliente], references: [id])
  total           Decimal @db.Decimal(10, 2)
  metodoPago      String  // "EFECTIVO", "TARJETA", "TRANSFERENCIA"
  nombrePodologo  String?
  numeroReceta    String?
  idUsuario       Int
  usuario         Usuario @relation(fields: [idUsuario], references: [id])
  tipoComprobante String  @default("RECIBO")
  estado          String  @default("COMPLETADA")
  montoRecibido   Decimal? @db.Decimal(10, 2)
  cambio          Decimal? @db.Decimal(10, 2)
  rucCliente      String?
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt

  detalles        DetalleVenta[]
}

model DetalleVenta {
  id              Int     @id @default(autoincrement())
  idVenta         Int
  venta           Venta   @relation(fields: [idVenta], references: [id], onDelete: Cascade)
  idProducto      Int
  producto        Producto @relation(fields: [idProducto], references: [id])
  cantidad        Int
  precioUnitario  Decimal @db.Decimal(10, 2)
  subtotal        Decimal @db.Decimal(10, 2)
  tipoUnidad      String  @default("UNIDAD")
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt
}

// ===== AUDITORÍA =====
model AuditoriaLog {
  id          Int      @id @default(autoincrement())
  accion      String   // ej. "CREAR_PRODUCTO", "ACTUALIZAR_STOCK", "NUEVA_VENTA"
  entidad     String   // ej. "Producto", "Venta"
  entidadId   Int?     // ID del registro modificado
  detalles    String?  // JSON con detalles
  idUsuario   Int?
  usuario     Usuario? @relation(fields: [idUsuario], references: [id])
  createdAt   DateTime @default(now())
}

// ===== RECUPERACIÓN DE CONTRASEÑA =====
model PasswordResetToken {
  id         Int      @id @default(autoincrement())
  correo     String
  tokenHash  String   @unique   // SHA-256 hash del token real
  expiracion DateTime
  usado      Boolean  @default(false)
  createdAt  DateTime @default(now())

  @@index([correo])
  @@index([tokenHash])
}
